--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             min-height: 400px;
             background: url('background.jpg') no-repeat 0 -400px;
             text-align: center;
-            color: #fff;
+            color: #060000;
         }
         .showcase h1 {
             margin-top: 100px;
