--- a/index.html
+++ b/index.html
@@ -108,13 +108,21 @@
     <section class="main-content">
         <div class="container">
             <h2>關於我</h2>
-            <p>我是[你的名字]，一名[你的職業]。我擁有[你的經驗年數]年的經驗，專注於[你的專業領域]。我熱愛學習新技術並應用於實際項目中。</p>
+            <p>我是chanui314，一名[你的職業]。我擁有[你的經驗年數]年的經驗，專注於[你的專業領域]。我熱愛學習新技術並應用於實際項目中。</p>
             <p>在我的職業生涯中，我曾參與過多個大型項目，並且在團隊合作和問題解決方面積累了豐富的經驗。我相信持續學習和不斷進步是成功的關鍵。</p>
         </div>
     </section>
 
+    <section class="main-content">
+        <div class="container">
+            <h2>聯絡方式</h2>
+            <li><a href="mailto:C112156133@nkust.edu.tw">Gmail</a></li>
+            <li><a href="https://github.com/chanui314">GitHub</a></li>
+        </div>
+    </section>
+
     <footer>
-        <p>版權所有 &copy; 2023 [你的名字]</p>
+        <p>版權所有 &copy; 2024 ui</p>
     </footer>
 </body>
 </html>
