--- a/index.html
+++ b/index.html
@@ -115,6 +115,18 @@
 
     <section class="main-content">
         <div class="container">
+            <h2>技能</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>PHP</li>
+                <li>MySQL</li>
+            </ul>
+        </div>
+
+    <section class="main-content">
+        <div class="container">
             <h2>聯絡方式</h2>
             <li><a href="mailto:C112156133@nkust.edu.tw">Gmail</a></li>
             <li><a href="https://github.com/chanui314">GitHub</a></li>
